refactor: adjust mainClass property in pom.xml to account for changed cli class location

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.example.Main</mainClass>
+                            <mainClass>org.example.cli.BenchmarkRunner</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
